# sincron-brain-model

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  bootstrap.ps1  install.ps1  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
docs/: major-tags.md  release.md  slides-building-public-01.html  slides-building-public-02.html  tags.md
src/sincron_brain/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  judge.py  major_tags.py  models.py  reconcile.py  scheduler.py  scoring.py  server.py  sleep.py  storage.py  tags.py  viewer.py
tests/: conftest.py  test_benchmark.py  test_cli_connect.py  test_e2e.py  test_judge.py  test_list_neighbors.py  test_mcp_integration.py  test_reconcile.py  test_scheduler.py  test_scoring.py  test_server_contract.py  test_server_viewer_refresh.py  test_set_judge_key.py  test_sleep.py  test_storage.py  test_tags.py  test_viewer.py
