[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sincron-brain-model"
version = "0.1.0"
description = "Plug-and-play memory layer for AI agents. MCP server. Major Tag → Tag retrieval, cognitive scoring, nightly sleep indexing."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Sincron Digital", email = "contato@sincron.digital" },
]
keywords = ["mcp", "memory", "ai", "agent", "obsidian", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.2.0",
    "litellm>=1.50.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "platformdirs>=4.2.0",
    "python-frontmatter>=1.1.0",
    "tomli-w>=1.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "pyright>=1.1.0",
]

[project.scripts]
sincron-brain = "sincron_brain.cli:app"

[project.urls]
Homepage = "https://github.com/MLTCorp/sincron-brain-model"
Repository = "https://github.com/MLTCorp/sincron-brain-model"

[tool.hatch.build.targets.wheel]
packages = ["src/sincron_brain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/sincron_brain/viewer.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
